# deepcode

./: .gitignore  README.md  README_CN.md  pyproject.toml
deepcode/: __init__.py  __main__.py
deepcode/bus/: __init__.py  events.py  queue.py
deepcode/cli/: __init__.py  app.py  utils.py
deepcode/cli/commands/: __init__.py  base.py  builtin.py  registry.py
deepcode/config/: loader.py  settings.py
deepcode/core/: agent.py  model.py
deepcode/core/manager/: filesystem.py
deepcode/core/middleware/: _utils.py  ask_user_question.py  bgtask.py  compact.py  optsystem.py  skills.py  subagent.py  taskmanager.py  todo.py
deepcode/core/prompt/agent/: agent-prompt-agentsmd-creation.md  agent-prompt-conversation-summarization.md
deepcode/core/prompt/reminder/: system-reminder-context.md  system-reminder-skills.md
deepcode/core/prompt/system/: system-deepcode.md  system-summarize.md
deepcode/core/prompt/tools/: ask_user_question.py  bash.py  edit.py  glob.py  grep.py  read.py  skills.py  write.py
tests/: test_agent.py  test_filesystem.py  test_tabbed_ui.py
